src/components/TutorialCard.css
.tutorial-card {
    position: absolute;
    width: 70vw;
    height: fit-content;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border-radius: 16px;
    background-color: rgba(0, 0, 0, 0.2);
    z-index: 10;
}

@media (prefers-color-scheme: dark) {
    .tutorial-card  {
        background-color: rgba(var(--ion-color-primary-contrast-rgb), 0.2);
    }
}

.tutorial-card-hide {
    display: none;
}

.tutorial-card-button {
    float: inline-end;
    padding: 10px;
    font-size: 14px;
    background-color: none;
}

.tutorial-card-body {
    padding: 10px 20px;
    padding-top: 0px;
}

